# struct/request/requests.go
@@ -1,0 +1,11 @@
+package request
+
+type CID struct {
+	// Client ID
+	Cid int `json:"cid" example:"10724585"`
+}
+
+type PRNumber struct {
+	// PR Number
+	PrNumber string `json:"prNumber" example:"AAP36467-1638243443748"`
+}
